[UPD] create-contenitor-with-column

--- a/index.html
+++ b/index.html
@@ -22,7 +22,115 @@
 
    <!--MAIN-->
   <main>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+            <div class="col-14">
+                <div class="content"></div>
+            </div>
+        </div>
+    </div>
   </main>
 
   <!--FOOTER-->
