[UPD] Create-main-with-35-pictures

--- a/index.html
+++ b/index.html
@@ -25,109 +25,328 @@
     <div class="container">
         <div class="row">
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
             <div class="col-14">
-                <div class="content"></div>
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+            </div>
+            <div class="col-14">
+                <div class="content">
+                    <img src="https://picsum.photos/id/237/150/125" alt=""">
+                    <span class="name">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
             </div>
         </div>
     </div>
