[UPD] Create-first-icon-in-footer

--- a/index.html
+++ b/index.html
@@ -354,7 +354,17 @@
 
   <!--FOOTER-->
   <footer>
-
+    <div class="footer-left">
+        <div class="icon">
+          <i class="fa-solid fa-microphone"></i>
+          <div>Mute</div>
+        </div>
+        <div class="icon">
+          <i class="fa-solid fa-angle-up"></i>
+        </div>
+    </div>
+    <div class="footer-center"></div>
+    <div class="footer-right"></div>
   </footer>
 
 
